# dwd-weather-pipeline

./: .dmypy.json  .gitignore  .pre-commit-config.yaml  memo_store.toml  prefect.db-shm  profiles.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.prefect/: memo_store.toml  profiles.toml
data/: KL_Tageswerte_Beschreibung_Stationen.txt  dwd_all_stations.parquet
data/extracted/: Metadaten_Fehldaten_00044_20231112_20250514.txt  Metadaten_Fehldaten_00420_20231112_20250514.txt  Metadaten_Fehlwerte_00044_20231112_20250514.txt  Metadaten_Fehlwerte_00420_20231112_20250514.txt  Metadaten_Geographie_00044.txt  Metadaten_Geographie_00420.txt  Metadaten_Geraete_Luftdruck_Stationshoehe_00044.txt  Metadaten_Geraete_Lufttemp_Am_Erdb_Minimum_00044.txt  Metadaten_Geraete_Lufttemp_Am_Erdb_Minimum_00420.txt  Metadaten_Geraete_Lufttemperatur_00044.txt  Metadaten_Geraete_Lufttemperatur_00420.txt  Metadaten_Geraete_Lufttemperatur_Maximum_00044.txt  Metadaten_Geraete_Lufttemperatur_Maximum_00420.txt  Metadaten_Geraete_Lufttemperatur_Minimum_00044.txt  Metadaten_Geraete_Lufttemperatur_Minimum_00420.txt  Metadaten_Geraete_Niederschlagshoehe_00044.txt  Metadaten_Geraete_Niederschlagshoehe_00420.txt  Metadaten_Geraete_Rel_Feuchte_00044.txt  Metadaten_Geraete_Rel_Feuchte_00420.txt  Metadaten_Geraete_Schneehoehe_00044.txt  Metadaten_Geraete_Schneehoehe_00420.txt  Metadaten_Geraete_Sonnenscheindauer_00044.txt  Metadaten_Geraete_Windspitze_Maximum_00044.txt  Metadaten_Parameter_klima_tag_00044.txt  Metadaten_Parameter_klima_tag_00420.txt  Metadaten_Stationsname_Betreibername_00044.txt  (+3 more)
scripts/: check.sh
tests/: __init__.py  test_main.py
(+2 files in other folders)
