[project]
name = "dwd-weather-pipeline"
version = "0.1.0"
description = "Pipeline for processing German Weather Service (DWD) data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prefect>=3.4.1",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "numpy>=2.2.5",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "parquet-tools>=0.2.16",
    "ipython>=8.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pandas-stubs",
    "types-requests",
    "types-beautifulsoup4",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dwd_weather_pipeline"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "B"]
lint.ignore = ["I001"]

[tool.uv.workspace]
members = [
    "dwd_weather_pipeline",
]
